[build-system]
requires = ["setuptools>=68.1", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "python-pkcs11"
version = "0.8.0"
description = "PKCS#11 support for Python"
readme = "README.rst"
authors = [
    {name = "Andrey Kislyuk", email = "kislyuk@gmail.com"},
    {name = "Danielle Madeley", email = "danielle@madeley.id.au"},
]
maintainers = [
    {name = "Andrey Kislyuk", email = "kislyuk@gmail.com"},
]
classifiers = ["License :: OSI Approved :: MIT License",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.9",
               "Programming Language :: Python :: 3.10",
               "Programming Language :: Python :: 3.11",
               "Programming Language :: Python :: 3.12",
               "Programming Language :: Python :: 3.13",
               "Development Status :: 5 - Production/Stable",
               "Intended Audience :: Developers",
               "Operating System :: OS Independent",
               "Topic :: Security :: Cryptography",
               "Topic :: Software Development :: Libraries :: Python Modules",
               "Topic :: System :: Hardware :: Hardware Drivers",
               "Topic :: System :: Hardware :: Hardware Drivers :: Smartcard",
               "Topic :: System :: Hardware :: Hardware Drivers :: Token"
]
dependencies = [
    "asn1crypto>=1.4.0",
]
license = {text = "MIT License"}
requires-python = ">=3.9"

[project.urls]
Homepage = "http://python-pkcs11.readthedocs.io/en/latest/"
Documentation = "http://python-pkcs11.readthedocs.io/en/latest/"
Issues = "https://github.com/pyauth/python-pkcs11/issues"
Repository = "https://github.com/pyauth/python-pkcs11"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "G",  # flake8-logging-format
    "RUF",  # ruff specific checks
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.setuptools.packages.find]
include = ["pkcs11*"]

[dependency-groups]
dev = [
    "cryptography>=44.0.0",
    "oscrypto>=1.3.0",
    "parameterized>=0.9.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "setuptools>=75.6.0",
    "setuptools-scm>=8.1.0",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]
