[build-system]
requires = ["setuptools>=80.8", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "python-pkcs11"
version = "0.7.0"
description = "PKCS#11 support for Python"
readme = "README.rst"
authors = [
    {name = "Andrey Kislyuk", email = "kislyuk@gmail.com"},
    {name = "Danielle Madeley", email = "danielle@madeley.id.au"},
]
maintainers = [
    {name = "Andrey Kislyuk", email = "kislyuk@gmail.com"},
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = ["asn1crypto>=1.4.0"]
license = "MIT"
requires-python = ">=3.9"

[project.urls]
Homepage = "http://python-pkcs11.readthedocs.io/en/latest/"
Documentation = "http://python-pkcs11.readthedocs.io/en/latest/"
Issues = "https://github.com/pyauth/python-pkcs11/issues"
Repository = "https://github.com/pyauth/python-pkcs11"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "G",  # flake8-logging-format
    "RUF",  # ruff specific checks
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.setuptools.packages.find]
include = ["pkcs11*"]

[dependency-groups]
dev = [
    "cryptography>=44.0.0",
    "parameterized>=0.9.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "setuptools>=80.8",
    "setuptools-scm>=8.3.1",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
    "cython"
]
